# GPUSim

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/experiments/: gemm_mlp_v1.yaml  gemm_mlp_with_heuristic.yaml
configs/gpu/: 4090.yaml  a100.yaml  a40.yaml  h100.yaml  l40.yaml  l40s.yaml
configs/kernels/: cublaslt_gemm.yaml  cutlass_gemm_simt.yaml  cutlass_gemm_tensorop.yaml
data/processed/: 4090_cutlass_round1_processed.csv  4090_cutlass_train_v1_processed.csv  4090_cutlass_train_v2_processed.csv  4090_cutlass_train_v3_processed.csv  cublas_4090_a40_wide_v1_5120_processed.csv  cublas_4090_a40_wide_v1_5120_processed_v2.csv  cublas_4090_a40_wide_v1_5120_processed_v3.csv  cublas_device4_wide_v1_2048_processed.csv  cublas_device4_wide_v1_4096_processed.csv  cublas_device4_wide_v1_4096_processed_v2.csv  cublas_device4_wide_v1_4096_processed_v3.csv  cublas_device5_a40_wide_v1_1024_processed.csv  cublas_device5_a40_wide_v1_1024_processed_v2.csv  cublas_device5_a40_wide_v1_1024_processed_v3.csv  cutlass_validation_4090.csv  cutlass_validation_4090.json  cutlass_validation_a40.csv  cutlass_validation_a40.json  cutlass_validation_l40s.csv  cutlass_validation_l40s.json
scripts/: analyze_case.py  build_cublas_dataset.py  build_dataset.py  collect_cublas_profiles.py  collect_heuristics.py  collect_profiles.py  compare_cutlass_ncu.py  debug_decomposer.py  eval_model.py  sweep_cutlass_ncu.py  sweep_cutlass_validation.py  train_mlp.py  validate_cutlass_decomposer.py
tools/: cublaslt_gemm_bench.cu  cutlass_gemm_bench.cu  cutlass_grid_probe.cu
(+116 files in other folders)
